# Blackboard

./: .gitignore  Cargo.toml  README.md
example_proj/: blackboard.toml
examples/c_tests/: blackboard.toml
examples/c_tests/src/: cool.c
examples/example_proj/src/: main.c
examples/multiple_bins/: blackboard.toml
src/: command_builder.rs  main.rs  toml_defaults.rs  toml_format.rs
