[package]
name = "blackboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackboard"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
serde = "1.0.145"
serde_derive = "1.0.145"
toml = "0.5.9"
colored = "2.0.0"
clap = { version = "4.0.10", features = ["derive"] }
paste = "1.0.9"
